Fix hero layout shift

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
 /* ! Hero */
 #hero {
   overflow: hidden;
+  overflow-anchor: none;
 }
 
 .c-hero-section {
